# vnkey

./: CHANGELOG.md  PROJECT_INDEX.md  README.md  mcp.json  version.json
.github/workflows/: homebrew.yml  release-macos.yml  static.yml
Sources/: .env.example  README.md  package-lock.json  package.json  print_dict.rs
Sources/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_get_app  test_get_app.m
Sources/src-tauri/capabilities/: default.json
Sources/src-tauri/engine/: ConvertTool.cpp  Engine.cpp  Engine.h  EnglishDictionary.cpp  EnglishDictionary.h  EnglishFSM.cpp  EnglishFSM.h  Macro.cpp  ProgrammingFSM.cpp  ProgrammingFSM.h  SmartSwitchKey.cpp
Sources/src-tauri/icons/: icon.icns
Sources/src-tauri/src/: cloud_sync.rs  db.rs  engine.rs  engine_wrapper.cpp  google_sync.rs  lib.rs  macos_apps.mm  tauri_event_tap.mm
Sources/src/routes/: +page.svelte
Sources/src/routes/clipboard/: +page.svelte
Sources/src/routes/hud/: +page.svelte
Sources/src/routes/onboarding/: +page.svelte
Tests/: EngineCorpusTest.cpp  run_engine_corpus_test.sh
Web/: auth.html  index.html  r2_guide.html  style.css
scripts/: README.md  build_all.sh  build_macos.sh
