[package]
name = "vnkey"
version = "1.0.0"
description = "VNKey cross-platform Vietnamese input method"
authors = ["theodore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vnkey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"

[profile.release]
# Keep the native input engine unchanged while making the Rust/Tauri shell
# smaller. These options only affect release code generation and linking.
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
