[package]
name = "vnkey"
version = "1.0.0"
description = "VNKey cross-platform Vietnamese input method"
authors = ["theodore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vnkey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31.0" }
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
base64 = "0.22"
rust-s3 = "0.33.0"
sha2 = "0.10"
lazy_static = "1.4.0"
reqwest = { version = "0.13.4", features = ["form", "json", "multipart"] }
urlencoding = "2.1.3"
tokio = { version = "1.52.3", features = ["time", "rt"] }

[profile.release]
# Keep the native input engine unchanged while making the Rust/Tauri shell
# smaller. These options only affect release code generation and linking.
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
